Thu Oct 28 09:52:32 2010                        Michael Jennings (mej)

Misc. fixes/cleanups to query execution.
----------------------------------------------------------------------
Fri Oct 29 03:38:13 2010                        Michael Jennings (mej)

Refactor Logger to offer convenience functions instead of requiring a flag.
----------------------------------------------------------------------
Fri Oct 29 19:41:08 2010                        Michael Jennings (mej)

Mostly cosmetic adjustments.
----------------------------------------------------------------------
Sat Oct 30 01:30:46 2010                        Michael Jennings (mej)

Add copyrights to perl modules.
----------------------------------------------------------------------