@@ -2,7 +2,7 @@ SUBDIRS =  HTML
 
 perlmodsdir = ${PERL_VENDORLIB}/Warewulf
 
-dist_perlmods_SCRIPTS = Config.pm Daemon.pm DB.pm Debug.pm Include.pm Logger.pm Node.pm NodeSet.pm Util.pm
+dist_perlmods_SCRIPTS = Config.pm Daemon.pm DB.pm Debug.pm Include.pm Logger.pm Object.pm ObjectSet.pm Util.pm
 
 MAINTAINERCLEANFILES = Makefile.in
 
